--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -80,6 +80,8 @@ div.title-info {
 }
 
 .instructions {
+	font-size: 20px;
+	font-weight: 700;
 	padding-left: 20%;
 	color: black;
 }
@@ -100,11 +102,13 @@ div.title-info {
 }
 
 .result-title {
+	color: #333;
 	font-size: 16px;
 	font-weight: 700;
 }
 
 .result-summary {
+	color: #444;
 	font-weight: 400;
 	font-size: 12px;
 }
