--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -80,14 +80,16 @@ div.title-info {
 }
 
 .instructions {
-	font-size: 20px;
+	font-size: 24px;
 	font-weight: 700;
-	padding-left: 20%;
-	color: black;
+	width: 50%;
+	margin: 0 auto;
+	text-align: center;
 }
 
 .search-results {
 	width: 60%;
+	padding-top: 20px;
 	margin: 0 auto;
 	padding-bottom: 10px;
 }
