--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -103,9 +103,18 @@ div.title-info {
     margin: 0 auto;
 }
 
+.table-comparison-header {
+    text-align: center;
+    color: black;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+
 .table-comparison {
-    float:left;
-    width:30%;
+    float: left;
+    width: 32%;
     margin: 10px;
 }
 
